k8s/budget/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: budget
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 8080
